--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,10 +4,12 @@
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.formats.fbx": "5.0.0",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.3.0",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "15.0.6",
     "com.unity.test-framework": "1.3.7",
     "com.unity.textmeshpro": "3.0.6",
